Server DB Table Update
IO Exception update at http server
Database api functions added
Server + Application data transfer functions
Pair programming 14.01.24